repositories - fixed "Add New Repository" label (bnc#590792)

--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -111,7 +111,7 @@
 
     <% if !disabled %>
       <fieldset>
-	<%= link_to   (_("Add") + " " + _("a new repository") ),
+	<%= link_to   (_("Add New Repository") ),
 	  {:action => 'add'},
 	  :onclick=>"$('#progress').show()" %>
       </fieldset>
