--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -55,7 +55,7 @@
 
 <% disabled = ! @permissions[:write] %>
 
-<%= render :partial => 'shared/missing_write_permissions', :locals => { :permissions => @permissions } %>
+<%= render :partial => 'shared/missing_write_permissions' if disabled %>
 
   <% form_for(:administrator, @administrator, :url => { :action => "update" }, :html => { :method => :put, :id => "adminForm", :onsubmit => "$('#progress').show()", :autocomplete => :off } ) do |f| %>
   <%= f.error_messages %>
