--- a/plugins/time/app/views/time/index.rhtml
+++ b/plugins/time/app/views/time/index.rhtml
@@ -55,6 +55,7 @@
 <div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/><%=_("Time")%></div>
 
 <div class="plugin-content grid_12">
+<%= render :partial => 'shared/missing_write_permissions' if disabled %>
   <% form_tag '/time/update', {:class => 'container', :onsubmit => "return submitTime();"} do %>
     <% #TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>
     %>
