--- a/plugins/mail/app/views/mail/index.html.erb
+++ b/plugins/mail/app/views/mail/index.html.erb
@@ -47,7 +47,7 @@
 
 <% disabled = ! @permissions[:write] %>
 
-<%= render :partial => 'shared/missing_write_permissions', :locals => { :permissions => @permissions } %>
+<%= render :partial => 'shared/missing_write_permissions' if disabled %>
 
   <% form_for(:mail, @mail, :url => { :action => "update" }, :html => { :method => :put, :id => "mailForm", :autocomplete => :off, :onsubmit => "if ($('#mailForm').valid()) $('#progress').show()" } ) do |f| %>
   <%= f.error_messages %>
