--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -1,3 +1,6 @@
+<%# Sort by priority then by name %>
+<% @repos.sort! {|x,y| x.priority == y.priority ? x.name.upcase <=> y.name.upcase : x.priority <=> y.priority} -%>
+
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "jquery.quicksearch.js" %>
@@ -36,7 +39,13 @@
 	 header     : 'div.list-fieldset div.list-fieldset-header'
       });
 
-      $(".accordion").accordion('activate',false);
+      $(".accordion").accordion('activate', false);
+
+     <%# if show filter is present then simulate click on the header %>
+     <%# to unfold the repository content %>
+     <% if !@show.blank? && @repos.find{|x| x.id == @show} %>
+       $('#repo_header_<%= safe_id(@show) -%>').click()
+     <% end %>
 
       $('input#repo_search').quicksearch('#repositories div.list-fieldset', {
 	  selector: 'span.quicksearch_content',
@@ -158,13 +167,11 @@
       </fieldset>
     <% end %>
 
-    <%# Sort by priority then by name %>
-    <% @repos.sort! {|x,y| x.priority == y.priority ? x.name.upcase <=> y.name.upcase : x.priority <=> y.priority} -%>
-
     <div id="repositories" class="accordion">
       <% @repos.each do |r| %>
+	<% sid = safe_id(r.id) %>
 	<div class="list-fieldset  <%= r.enabled ? 'repository-enabled' : 'repository-disabled' %>">
-	  <div class="list-fieldset-header">
+	  <div class="list-fieldset-header" id="repo_header_<%= sid -%>">
 	    <%# do quick search only in name and URL => use quicksearch_content class %>
 	    <span class="quicksearch_content">
 	      <div>
@@ -176,7 +183,6 @@
 	    <span style="float: right; margin-right: 5em"><%= prio_summary r.priority -%></span>
 	  </div>
 	  <div class='repository-content' style="display:none">
-	      <% sid = safe_id(r.id) %>
 	      <% form_for(:repository, r, :url => { :action => 'update', :id => r.id },
 		:html => { :method => :put, :id => 'repositoryForm_' + sid, :onsubmit => "form_handler('#{sid}')" }
 	      ) do |f| %>
