--- a/plugins/users/app/views/users/_user_form.erb
+++ b/plugins/users/app/views/users/_user_form.erb
@@ -5,13 +5,13 @@
       <legend><%= _("Login Settings") %></legend>
       <div>
         <p>
-          <label><%=_("Login Name")%></label>
-          <%= f.text_field :uid, :disabled => disabled %>
-          <%= f.text_field :id, :class => "hidden" %>
+          <label><%=_("Full Name")%></label>
+          <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login();" %>
         </p>
         <p>
-          <label><%=_("Full Name")%></label>
-          <%= f.text_field :cn , :disabled => disabled %>
+          <label><%=_("Login Name")%></label>
+          <%= f.text_field :uid, :disabled => disabled, :onblur => "propose_home();" %>
+          <%= f.text_field :id, :class => "hidden" %>
         </p>
         <p>
           <label><%=_("Password")%></label>
