--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -41,6 +41,9 @@
 <div class='plugin-icon'><img src='/icons/yast-firewall.png' alt="firewall module"/><%=_("Firewall")%></div>
 
 <div class="plugin-content grid_12">
+
+  <%= render :partial => 'shared/missing_write_permissions' if disabled %>
+
   <% form_tag '/firewall/update', {:class => 'container'} do %>
   <div id="fw_services_values">
     <% @firewall.fw_services.each do |service| %>
