<i> is nice here, and repositories are using it too

--- a/plugins/services/app/views/services/_status.rhtml
+++ b/plugins/services/app/views/services/_status.rhtml
@@ -46,4 +46,4 @@ case status
 end
 -%>
 <%=_("Current status of the service:")%>
-<span class=<%=classname%> style="color: <%=color%>"><%=label%></span>
+<i><span class=<%=classname%> style="color: <%=color%>"><%=label%></span></i>
