--- a/plugins/users/app/views/groups/edit.html.erb
+++ b/plugins/users/app/views/groups/edit.html.erb
@@ -1,3 +1,32 @@
+<%= javascript_include_tag "group_members.js" %>
+
+  <style type="text/css">
+    label.error {
+         display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50%
+    }
+
+    .GContainerUser, .GContainerGroups {
+        float: left;
+        margin: 3px;
+        border: #669999 2px solid;
+        padding: 5px;
+     }
+     .GBox {
+        border: #000 1px solid;
+        cursor: pointer;
+	display: block;
+	float: left;
+        font-family: verdana, tahoma, arial;
+        font-size: 10px;
+        margin-bottom: 5px;
+        padding: 2px;
+        width: 94px;
+     }
+     #ContainerUser .GBox {
+        background-color: #eee;
+     }
+  </style>
+
 <%
  disabled = ! ((@permissions[:groupadd] && @adding) || (@permissions[:groupmodify] && !@adding)) %>
 <div class='plugin-icon'><img src='/icons/yast-groups.png' alt="groups module"/>
@@ -38,8 +67,16 @@
     <p>
       <label><%=_("Members")%></label>
       <%= f.text_field :members_string, :disabled => false %>
+      <a href="#" class="button" onClick="open_users_dialog();return false;">Manage Memebers</a>
     </p>
   </fieldset>
+
+  <div id="members" style="display:none;" title="Members">
+     <div>
+      <div class="GContainerUser" style="width: 100px;" id="ContainerUser" onclick="moveItem(event,'ContainerGroups');"> </div>
+      <div class="GContainerGroups" style="width: 400px;" id="ContainerGroups" onclick="moveItem(event,'ContainerUser');"> </div>
+     </div>
+  </div>
 
   <fieldset>
     <%= form_cancel_button :action => :index %>
@@ -48,4 +85,5 @@
   </fieldset>
 
 <% end %>
+    <div><input type="hidden" id="all_users_string" value="<%= @all_users_string %>" /></div>
 </div>
