--- a/plugins/users/app/views/groups/edit.html.erb
+++ b/plugins/users/app/views/groups/edit.html.erb
@@ -66,9 +66,10 @@
     </p>
     <p>
       <label><%=_("Members")%></label>
-      <%= f.text_field :members_string, :disabled => false %>
+      <%= f.text_field :members_string, :disabled => false, :onkeyup => "members_validation();" %>
       <a href="#" class="button" onClick="open_users_dialog();return false;">Manage Memebers</a>
     </p>
+    <p><label id="users-error" class="error"></label><p>
   </fieldset>
 
   <div id="members" style="display:none;" title="Members">
