delete user's home directory (bnc#591410)

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -65,7 +65,7 @@ function disable(which){
     <td align=center id="login"><%= h user.uid  -%></td>
     <td align=center width="65%" id="fullname"><%= link_to ( h user.cn || "-none-" ), {:action => :edit, :id => user.id}, :onclick=>"$('#progress').show()" -%></td>
     <% if @permissions[:userdelete] %>
-    <td class="icon" width="10%"><div onclick="disable(this);"><%= html_delete_link(user.uid, :destroy, _("Are you sure to delete user %s?") % user.id ) %></div></td>
+    <td class="icon" width="10%"><div onclick="disable(this);"><%= html_delete_link(user.uid, :destroy, _("Are you sure to delete user '%s'?") % user.id + "\n" + _("Home directory will be deleted as well.") ) %></div></td>
     <% end %>
   </tr>
   <% end %>
