--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -199,6 +199,7 @@
   <% javascript_tag do %>
     $(document).ready(function(){
       $(".accordion").accordion({
+        autoHeight : false,
         navigation : true,
         header     : 'fieldset legend'
       });
