use height: auto, the scrollbar should not be needed by default

--- a/webclient/app/views/main/_select_language.html.erb
+++ b/webclient/app/views/main/_select_language.html.erb
@@ -14,7 +14,8 @@
            {
     	     bgiframe: true,
     	     autoOpen: false,
-    	     height: 300,
+    	     height: 'auto',
+	     title: "<%= _("Language Selection")%>",
     	     modal: true
            });
            $('#language_icons').dialog('open');
