--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -201,7 +201,8 @@
       $(".accordion").accordion({
         autoHeight : false,
         navigation : true,
-        header     : 'fieldset legend'
+        header     : 'fieldset legend',
+        collapsible: true
       });
     });
   <% end %>
