--- a/plugins/users/app/views/groups/edit.html.erb
+++ b/plugins/users/app/views/groups/edit.html.erb
@@ -66,7 +66,7 @@
     </p>
     <p>
       <label><%=_("Members")%></label>
-      <%= f.text_field :members_string, :disabled => false, :onkeyup => "members_validation();" %>
+      <%= f.text_field :members_string, :disabled => false, :onkeyup => "members_validation(this);" %>
       <a href="#" class="button" onClick="open_users_dialog();return false;">Manage Memebers</a>
     </p>
     <p><label id="users-error" class="error"></label><p>
