tag for translation

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -78,7 +78,7 @@ function disable(which){
   <% if @permissions[:useradd] %>
   <% end %>
 </fieldset>
-<%= link_to "Manage Groups", "controller" => "groups" %>
+<%= link_to _("Manage Groups"), "controller" => "groups" %>
 </div>
 </div>
 
