--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -66,12 +66,34 @@
         <div id="<%=plugin.message_id%>" >
           <p>     
             <%= plugin.long_description %>
+            <% unless plugin.details.blank? %>
+              <a href="#" id="<%='detail_link_'+plugin.message_id%>">(<%=_("details")%>)</a>
+              <div id="<%='detail_'+plugin.message_id%>" >
+                <div>
+                  <%= plugin.details %>
+                </div>
+              </div>
+
+              <script type="text/javascript">
+              $(document).ready(
+                   function() {
+                     // define a dialog
+                     $('#<%='detail_'+plugin.message_id%>').dialog(
+                     {
+               	      bgiframe: true,
+    	              autoOpen: false,
+            	      height: 'auto',
+                      title: "<%= _("Details")%>",
+                      modal: true
+                     });
+                     // open detail popup
+                     $('#<%='detail_link_'+plugin.message_id%>').click( function() {
+                       $('#<%='detail_'+plugin.message_id%>').dialog('open');
+                     });
+                  });
+              </script>
+            <% end %>
           </p>     
-	  <% unless plugin.details.blank? %>
-          <p>     
-            <%= plugin.details %>
-          </p>     
-	  <% end %>
           <% unless plugin.confirmation_host.blank? || plugin.confirmation_link.blank? %>
             <% if plugin.confirmation_host == "client" %>
               <% unless plugin.confirmation_label.blank? %>
